2006-08-10  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stdlib.h: include errno.h for aCC, in case of -mt option in force.
	This solve errno problem on HP-UX. Thanks Boris Gubenko.

2006-08-09  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_msvc.h: Add _STLP_NORETURN_FUNCTION for MSVC
	compilers.

	* stlport: Move place of _STLP_FUNCTION_THROWS in function declaration to
	make msvc compiler happier, gcc do not care about position of this
	attribute.

	* stlport/stl/_ioserr.h: Fixed specification of STLport configuration file
	in #error statement.

2006-08-04  Francois Dumont  <dums@stlport...>

	* stlport: Create _STLP_FUNCTION_THROWS depending on _STLP_NORETURN_FUNCTION
	and also taking into account exception handling configuration.

	* test/unit/alg_test.cpp, istmit_test.cpp: Fixes to make test buildable with
	native compiler Standard library.

2006-08-03  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/evc8.mak: Patch from Ulrich Echkardt to activate
	whole program optimization.

2006-07-31  Francois Dumont  <dums@stlport...>

	* Patch from Michael Fink to fix EVC emulator build.

2006-07-26  Francois Dumont  <dums@stlport...>

	* src/fstream.cpp: Fixed MMAP_CHUNK definition, an offset type is signed.

	* Creation of the 5.1.0 RC2 package.

	* Creation of STLPORT_5_1_RC2 tag

2006-07-25  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_system.h, _windows.h: Fixed MinGW config that also
	need _windows.h.

	* stlport/stl/config/_mingw.h: Removed, conflict with platform system
	header.

2006-07-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/config: Add _STLP_PLATFORM and _STLP_COMPILER repectively
	containing STLport detected platform and compiler names. Some names
	are surely not accurate and will be fixed but introducing those macros,
	especially _STLP_COMPILER, help to report detection issue.

	* stlport/stl/config/_system.h: Change macro checks in order to guaranty