@@ -117,14 +117,19 @@ inline _STLP_VENDOR_CSTD::div_t div(int __x, int __y) { return _STLP_VENDOR_CSTD
 #  pragma function (abs)
 #endif
 
+//HP-UX native lib has abs() and div() functions in global namespace
+#if !defined (__HP_aCC) || (__HP_aCC < 30000)
+
 //MSVC starting with .Net 2003 already define all math functions in global namespace:
-#if !defined (_STLP_MSVC_LIB) || (_STLP_MSVC_LIB < 1310) || defined(UNDER_CE)
+#  if !defined (_STLP_MSVC_LIB) || (_STLP_MSVC_LIB < 1310) || defined(UNDER_CE)
 inline long abs(long __x) { return _STLP_VENDOR_CSTD::labs(__x); }
-#endif
+#  endif
 
 /** VC since version 8 has this, the platform SDK and CE SDKs hanging behind. */
-#if !defined (_STLP_MSVC_LIB) || (_STLP_MSVC_LIB < 1400) || defined (_STLP_USING_PLATFORM_SDK_COMPILER) || defined(UNDER_CE)
+#  if !defined (_STLP_MSVC_LIB) || (_STLP_MSVC_LIB < 1400) || defined (_STLP_USING_PLATFORM_SDK_COMPILER) || defined(UNDER_CE)
 inline _STLP_VENDOR_CSTD::ldiv_t div(long __x, long __y) { return _STLP_VENDOR_CSTD::ldiv(__x, __y); }
+#  endif
+
 #endif
 
 #if defined (_STLP_RESTORE_FUNCTION_INTRINSIC)
